objects/Relations__c.object
<CustomObject>
    <description>It is a junction object which establishes many to many relationship between artifacts.</description>
    <fields>
        <fullName>Action_Type__c</fullName>
        <formula>Action__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipLabel>Related To</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Process</label>
        <referenceTo>Approval_Process__c</referenceTo>
        <relationshipLabel>Related Actions</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Step</label>
        <referenceTo>Approval_Step__c</referenceTo>
        <relationshipLabel>Related Actions</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Child of</relationshipLabel>
        <relationshipName>Relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controller</label>
        <referenceTo>Controller__c</referenceTo>
        <relationshipLabel>Related VF Pages</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Event at which the the action take place.</description>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Before Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Undelete</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Handler__c</fullName>
        <description>Controller of the method</description>
        <formula>Action__r.Controller__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Parent of</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trigger</label>
        <referenceTo>Trigger__c</referenceTo>
        <relationshipLabel>Related Actions</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Action__c</fullName>
        <description>Type of approval action</description>
        <label>Type of Action</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Submission Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approval Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Rejection Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection Actions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visualforce_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visualforce Page</label>
        <referenceTo>Visualforce_Page__c</referenceTo>
        <relationshipLabel>Related Controllers</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Rule</label>
        <referenceTo>Workflow_Rule__c</referenceTo>
        <relationshipLabel>Related Actions</relationshipLabel>
        <relationshipName>Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relation</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Relation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations</pluralLabel>
    <recordTypes>
        <fullName>Approval_Process_to_Action</fullName>
        <active>true</active>
        <description>Relates approval process with the associated actions.</description>
        <label>Approval Process to Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Step_to_Action</fullName>
        <active>true</active>
        <description>Relates approval steps with the associated actions.</description>
        <label>Approval Step to Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Controller_to_VF_Page</fullName>
        <active>true</active>
        <description>Relates controller with the associated vf pages.</description>
        <label>Controller to VF Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Object_to_Object</fullName>
        <active>true</active>
        <description>parent to child relationship between object</description>
        <label>Object to Object</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trigger_To_Method</fullName>
        <active>true</active>
        <description>Relates triggers with the associated methods.</description>
        <label>Trigger To Method</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workflow_to_Action</fullName>
        <active>true</active>
        <description>Relates workflow rules with the associated workflow actions</description>
        <label>Workflow to Action</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>